==> sentoxo/SmartRC-CC1101-Driver-Lib-Pico/ELECHOUSE_CC1101_SRC_DRV.cpp <==
#include "ELECHOUSE_CC1101_SRC_DRV.h"
#include "hardware/spi.h"
#include "pico/stdlib.h"
#include "stdlib.h"
#include "string.h"
#define WRITE_BURST 0x40     // write burst
#define READ_SINGLE 0x80     // read single
#define READ_BURST 0xC0      // read burst
#define BYTES_IN_RXFIFO 0x7F // byte number in RXfifo
#define max_modul 6
#define byte uint8_t
#define SPI_BUS spi0 // spi0 or spi1

void ELECHOUSE_CC1101::SpiStart(void) {
  // initialize the SPI pins
  gpio_set_function(SCK_PIN, GPIO_FUNC_SPI);
  gpio_set_function(MOSI_PIN, GPIO_FUNC_SPI);
  gpio_set_function(MISO_PIN, GPIO_FUNC_SPI);
  gpio_set_dir(SS_PIN, GPIO_OUT);

  // enable SPI
  spi_init(SPI_BUS, 1000 * 1000 * 4);
  spi_set_format(SPI_BUS, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);
  // gpio_put(SS_PIN, 0);
}

void ELECHOUSE_CC1101::SpiEnd(void) {
  // disable SPI
  // gpio_put(SS_PIN, 1);
  spi_deinit(SPI_BUS);
}

void ELECHOUSE_CC1101::GDO_Set(void) {
  gpio_set_dir(GDO0, GPIO_OUT);
  gpio_set_dir(GDO2, GPIO_IN);
}

void ELECHOUSE_CC1101::GDO0_Set(void) { gpio_set_dir(GDO0, GPIO_IN); }

void ELECHOUSE_CC1101::Reset(void) {
  gpio_put(SS_PIN, 0);
  sleep_ms(1);
  gpio_put(SS_PIN, 1);
  sleep_ms(1);
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  uint8_t command = CC1101_SRES;
  spi_write_blocking(SPI_BUS, &command, 1);
  while (gpio_get(MISO_PIN))
    ;
  gpio_put(SS_PIN, 1);
}

void ELECHOUSE_CC1101::SpiWriteReg(byte addr, byte value) {
  SpiStart();
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &addr, 1);
  spi_write_blocking(SPI_BUS, &value, 1);
  gpio_put(SS_PIN, 1);
  SpiEnd();
}

void ELECHOUSE_CC1101::SpiWriteBurstReg(byte addr, byte *buffer, byte num) {
  byte i, temp;
  SpiStart();
  temp = addr | WRITE_BURST;
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &temp, 1);
  spi_write_blocking(SPI_BUS, buffer, num);

  gpio_put(SS_PIN, 1);
  SpiEnd();
}

void ELECHOUSE_CC1101::SpiStrobe(byte strobe) {
  SpiStart();
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &strobe, 1);
  gpio_put(SS_PIN, 1);
  SpiEnd();
}

byte ELECHOUSE_CC1101::SpiReadReg(byte addr) {
  byte temp, value;
  SpiStart();
  temp = addr | READ_SINGLE;
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &temp, 1);
  uint8_t dummy = 0;
  spi_write_read_blocking(SPI_BUS, &dummy, &value, 1);
  gpio_put(SS_PIN, 1);
  SpiEnd();
  return value;
}

void ELECHOUSE_CC1101::SpiReadBurstReg(byte addr, byte *buffer, byte num) {
  byte i, temp;
  SpiStart();
  temp = addr | READ_BURST;
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &temp, 1);
  uint8_t dummy[num] = {0};
  spi_write_read_blocking(SPI_BUS, dummy, buffer, num);
  gpio_put(SS_PIN, 1);
  SpiEnd();
}

byte ELECHOUSE_CC1101::SpiReadStatus(byte addr) {
  byte value, temp;
  SpiStart();
  temp = addr | READ_BURST;
  gpio_put(SS_PIN, 0);
  while (gpio_get(MISO_PIN))
    ;
  spi_write_blocking(SPI_BUS, &temp, 1);
  uint8_t dummy = 0;
  spi_write_read_blocking(SPI_BUS, &dummy, &value, 1);
  gpio_put(SS_PIN, 1);
  SpiEnd();
  return value;
}

void ELECHOUSE_CC1101::SendData(char *txchar) {
  int len = strlen(txchar);
  byte chartobyte[len];
  for (int i = 0; i < len; i++) {
    chartobyte[i] = txchar[i];
  }
  SendData(chartobyte, len);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer, byte size) {
  SpiWriteReg(CC1101_TXFIFO, size);
  SpiWriteBurstReg(CC1101_TXFIFO, txBuffer, size); // write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX); // start send
  while (!gpio_get(GDO0))
    ; // Wait for GDO0 to be set -> sync transmitted
  while (gpio_get(GDO0))
    ;                     // Wait for GDO0 to be cleared -> end of packet
  SpiStrobe(CC1101_SFTX); // flush TXfifo
  trxstate = 1;
}

void ELECHOUSE_CC1101::SendData(char *txchar, int t) {
  int len = strlen(txchar);
  byte chartobyte[len];
  for (int i = 0; i < len; i++) {
    chartobyte[i] = txchar[i];
  }
  SendData(chartobyte, len, t);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer, byte size, int t) {
  SpiWriteReg(CC1101_TXFIFO, size);
  SpiWriteBurstReg(CC1101_TXFIFO, txBuffer, size); // write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX); // start send
  sleep_ms(t);
  SpiStrobe(CC1101_SFTX); // flush TXfifo
  trxstate = 1;
}
