==> pvginkel/SomfyRemote/components/SmartRC-CC1101-Driver-Lib/ELECHOUSE_CC1101_SRC_DRV.cpp <==
#include <SPI.h>
#include "ELECHOUSE_CC1101_SRC_DRV.h"
#include <Arduino.h>
#define   WRITE_BURST       0x40            //write burst
#define   READ_SINGLE       0x80            //read single
#define   READ_BURST        0xC0            //read burst
#define   BYTES_IN_RXFIFO   0x7F            //byte number in RXfifo
#define   max_modul 6
#define   MISO_TIMEOUT 10 // Timeout for MISO pin to go low in milliseconds

void ELECHOUSE_CC1101::SpiStart(void)
{
  // initialize the SPI pins
  pinMode(SCK_PIN, OUTPUT);
  pinMode(MOSI_PIN, OUTPUT);
  pinMode(MISO_PIN, INPUT);
  pinMode(SS_PIN, OUTPUT);

  // enable SPI
  #if defined(ESP32) || defined(ARDUINO_ARCH_ESP32)
  SPI.begin(SCK_PIN, MISO_PIN, MOSI_PIN, SS_PIN);
  #else
  SPI.begin();
  #endif
}

void ELECHOUSE_CC1101::SpiEnd(void)
{
  // disable SPI
  SPI.endTransaction();
  SPI.end();
}

void ELECHOUSE_CC1101::GDO_Set (void)
{
	pinMode(GDO0, OUTPUT);
	pinMode(GDO2, INPUT);
}

void ELECHOUSE_CC1101::GDO0_Set (void)
{
  pinMode(GDO0, INPUT);
}

bool ELECHOUSE_CC1101::Reset (void)
{
	writeSPIPin(SS_PIN, LOW);
	delay(1);
	writeSPIPin(SS_PIN, HIGH);
	delay(1);
	writeSPIPin(SS_PIN, LOW);
  if(!waitForMisoLow()) return false;
  SPI.transfer(CC1101_SRES);
  if(!waitForMisoLow()) return false;
	writeSPIPin(SS_PIN, HIGH);

  return true;
}

void ELECHOUSE_CC1101::SpiWriteReg(byte addr, byte value)
{
  SpiStart();
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  SPI.transfer(addr);
  SPI.transfer(value); 
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();
}

byte ELECHOUSE_CC1101::SpiWriteBurstReg(byte addr, byte *buffer, byte num)
{
  byte i, temp;
  SpiStart();
  temp = addr | WRITE_BURST;
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  byte resp = SPI.transfer(temp);
  for (i = 0; i < num; i++) {
    resp = SPI.transfer(buffer[i]);
  }
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();

  return resp;
}

byte ELECHOUSE_CC1101::SpiStrobe(byte strobe)
{
  SpiStart();
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  byte resp = SPI.transfer(strobe);
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();
  
  return resp;
}

byte ELECHOUSE_CC1101::SpiReadReg(byte addr) 
{
  byte temp, value;
  SpiStart();
  temp = addr| READ_SINGLE;
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  SPI.transfer(temp);
  value=SPI.transfer(0);
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();
  return value;
}

void ELECHOUSE_CC1101::SpiReadBurstReg(byte addr, byte *buffer, byte num)
{
  byte i,temp;
  SpiStart();
  temp = addr | READ_BURST;
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  SPI.transfer(temp);
  for(i=0;i<num;i++)
  {
  buffer[i]=SPI.transfer(0);
  }
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();
}

byte ELECHOUSE_CC1101::SpiReadStatus(byte addr) 
{
  byte value,temp;
  SpiStart();
  temp = addr | READ_BURST;
  writeSPIPin(SS_PIN, LOW);
  waitForMisoLow();
  SPI.transfer(temp);
  value=SPI.transfer(0);
  writeSPIPin(SS_PIN, HIGH);
  SpiEnd();
  return value;
}

void ELECHOUSE_CC1101::SendData(char *txchar)
{
int len = strlen(txchar);
byte chartobyte[len];
for (int i = 0; i<len; i++){chartobyte[i] = txchar[i];}
SendData(chartobyte,len);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer,byte size)
{
  SpiWriteReg(CC1101_TXFIFO,size);
  SpiWriteBurstReg(CC1101_TXFIFO,txBuffer,size);      //write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX);                  //start send
    while (!digitalRead(GDO0));               // Wait for GDO0 to be set -> sync transmitted  
    while (digitalRead(GDO0));                // Wait for GDO0 to be cleared -> end of packet
  SpiStrobe(CC1101_SFTX);                 //flush TXfifo
  trxstate=1;
}

void ELECHOUSE_CC1101::SendData(char *txchar,int t)
{
int len = strlen(txchar);
byte chartobyte[len];
for (int i = 0; i<len; i++){chartobyte[i] = txchar[i];}
SendData(chartobyte,len,t);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer,byte size,int t)
{
  SpiWriteReg(CC1101_TXFIFO,size);
  SpiWriteBurstReg(CC1101_TXFIFO,txBuffer,size);      //write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX);                  //start send
  delay(t);
  SpiStrobe(CC1101_SFTX);                 //flush TXfifo
  trxstate=1;
}
